[tool.poetry]
name = "lion"
version = "0.4.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
license = "BSD-2-Clause"
readme = "README.md"
description = "Fast and flexible object mapping (serialization, marshalling)"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.5"
pytz = "^2020.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
tox = "^3.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
