[tool.poetry]
name = "lion"
version = "0.5.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
license = "BSD-2-Clause"
readme = "README.md"
description = "Fast and flexible object mapping (serialization, marshalling)"
repository = "https://github.com/bikeshedder/lion"
homepage = "https://github.com/bikeshedder/lion"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "*"
python-dateutil = "^2.8.2"
pyparsing = "^3.1.1"

[tool.poetry.dev-dependencies]
tox = "^4.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
