[metadata]
name = lion
version = attr:lion.__version__
description = My package description
long_description = file: README.rst
license = BSD 2-Clause License
author = Michael P. Jung
author_email = michael.jung@terreon.de
home_page = https://bitbucket.com/tereron/lion
platforms = any
classifiers =
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = pyparsing

[options.packages.find]
exclude =

[flake8]
exclude = build,.git,.tox
ignore = W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
not_skip = __init__.py
