[tool.poetry]
name = "lion-benchmarks"
version = "0.0.0"
description = ""
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = "^3.20.2"
serpy = "^0.3.1"
djangorestframework = "^3.14.0"
django-rest-marshmallow = "^4.0.2"
python-dateutil = "^2.8.1"
lion = { path = "../" }
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
